--- a/my-project/api/course/models/course.settings.json
+++ b/my-project/api/course/models/course.settings.json
@@ -18,7 +18,7 @@
       "type": "integer"
     },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "plugin": "upload",
       "required": false
